fix transition between rooms, previous item s disappear modal's open state uses !!modalState for clarity remove outline on focus for modal containers fix double overflow scroll lines

--- a/client/src/components/Panel.css
+++ b/client/src/components/Panel.css
@@ -56,7 +56,8 @@
 	font-size: 3em;
 }
 
-.emoji-list, .emoji-settings-container {
+.emoji-list,
+.emoji-settings-container {
 	display: flex;
 	justify-content: center;
 	align-content: center;
@@ -266,7 +267,11 @@
 	white-space: nowrap;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	justify-content: center;
+}
+.room-icon-list::before,
+.room-icon-list::after {
+	content: '';
+	flex: 1;
 }
 
 .room-icon {
@@ -277,7 +282,7 @@
 	background: transparent;
 }
 
-.room-icon p{
+.room-icon p {
 	text-transform: capitalize;
 	font-family: 'Blinker';
 	font-size: 20px;
@@ -292,6 +297,7 @@
 	width: 100vw;
 	padding-left: 10px;
 	padding-right: 10px;
+	overflow: hidden;
 	/* display: flex;
 	overflow: auto;
 	white-space: nowrap; */
@@ -300,7 +306,7 @@
 #room-active-category {
 	background: #89dcff;
 	font-weight: 1000;
-  color: #000000;
+	color: #000000;
 }
 
 @media only screen and (max-width: 500px) {
